arcadia-fe/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: arcadia-fe
  labels:
    app: arcadia-fe
spec:
  replicas: 3
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: arcadia-fe
  template:
    metadata:
      labels:
        app: arcadia-fe
    spec:
      containers:
        - image: gcu-profit-dev.kr-central-2.kcr.dev/arcadia-nextjs/arcadia-fe:92
          name: arcadia-fe
          ports:
            - containerPort: 3000
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "1024Mi"
              cpu: "500m"
      imagePullSecrets:
        - name: kic-registry
  strategy:
    blueGreen:
      activeService: arcadia-fe-active
      previewService: arcadia-fe-preview
      autoPromotionEnabled: true
