arcadia-fe/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: arcadia-fe
  labels:
    app: arcadia-fe
  annotations:
    kubernetes.io/ingress.class: istio
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
    # nginx.ingress.kubernetes.io/backend-protocol: HTTPS
spec:
  rules:
  - host: arcadia.p-e.kr
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: arcadia-fe
            port:
              number: 80
  tls:
    - hosts:
      - arcadia.p-e.kr
      secretName: arcadia-fe-tls
status:
  loadBalancer:
    ingress:
      - {}
